--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "firebase": "^9.14.0",
+    "vue": "^2.6.14",
+    "vue-router": "3.0",
+    "vuefire": "^3.0.0-alpha.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
